Changed block view name to 'default' to fix preview issue

--- a/Resources/config/blocks.yml
+++ b/Resources/config/blocks.yml
@@ -9,6 +9,6 @@ blocks:
                     regex: /[^\\s]/
                     message: 'Sample content'
         views:
-            basic:
+            default:
                 template: EzSystemsLandingPageBlockTemplateBundle::template.html.twig
                 name: Basic Template Block view
